tests/baselines/reference/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.errors.txt
<<<<<<< b059135c51ee93f8fb44dd70a2ca67674ff7a877
tests/cases/compiler/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts(19,64): error TS2741: Property 'z' is missing in type 'B' but required in type 'C'.
=======
tests/cases/compiler/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts(19,59): error TS2345: Argument of type '(c: C) => B' is not assignable to parameter of type '(x: C) => C'.
  Type 'B' is not assignable to type 'C'.
    Property 'z' is missing in type 'B'.
tests/cases/compiler/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts(19,76): error TS2345: Argument of type '(b: C) => A' is not assignable to parameter of type '(x: C) => C'.
  Type 'A' is not assignable to type 'C'.
    Property 'z' is missing in type 'A'.
>>>>>>> Always call getCandidateForOverloadFailure


==== tests/cases/compiler/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts (2 errors) ====
    class Chain<T extends A> {
        constructor(public value: T) { }
        then<S extends T>(cb: (x: T) => S): Chain<S> {
            return null;
        }
    }
    
    class A {
        x;
    }
    class B extends A {
        y;
    }
    class C extends B {
        z;
    }
    
    // Ok to go down the chain, but error to try to climb back up
    (new Chain(new A)).then(a => new B).then(b => new C).then(c => new B).then(b => new A);
<<<<<<< b059135c51ee93f8fb44dd70a2ca67674ff7a877
                                                                   ~~~~~
!!! error TS2741: Property 'z' is missing in type 'B' but required in type 'C'.
!!! related TS2728 tests/cases/compiler/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts:15:5: 'z' is declared here.
!!! related TS6502 tests/cases/compiler/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts:3:27: The expected type comes from the return type of this signature.
=======
                                                              ~~~~~~~~~~
!!! error TS2345: Argument of type '(c: C) => B' is not assignable to parameter of type '(x: C) => C'.
!!! error TS2345:   Type 'B' is not assignable to type 'C'.
!!! error TS2345:     Property 'z' is missing in type 'B'.
                                                                               ~~~~~~~~~~
!!! error TS2345: Argument of type '(b: C) => A' is not assignable to parameter of type '(x: C) => C'.
!!! error TS2345:   Type 'A' is not assignable to type 'C'.
!!! error TS2345:     Property 'z' is missing in type 'A'.
>>>>>>> Always call getCandidateForOverloadFailure
